--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@
 *.til
 *.pchtxt
 *.ips
+*.lst
 .vscode/
+.cache/
 build*/
 debug/
 release/
@@ -22,5 +24,7 @@ lib/
 linkerscripts/symstemp.ld
 starlight_patch*/
 scripts/.idea/*
+include/privateIps.hpp
 !exported.txt
-subsdk*
+custom actor models/*
+compile_commands.json
