--- a/MakefileNSO
+++ b/MakefileNSO
@@ -45,7 +45,7 @@ ARCH	:=	-march=armv8-a -mtune=cortex-a57 -mtp=soft -fPIC -ftls-model=local-exec
 CFLAGS	:=	-g -Wall -ffunction-sections \
 			$(ARCH) $(DEFINES)
 
-CFLAGS	+=	$(INCLUDE) -D__SWITCH__ -DS2VER=$(S2VER) -DS2VERSTR=$(S2VERSTR) -D NNSDK -D SWITCH -std=gnu++20
+CFLAGS	+=	$(INCLUDE) -D__SWITCH__ -DS2VER=$(S2VER) -O3 -DS2VERSTR=$(S2VERSTR) -D NNSDK -D SWITCH -std=gnu++20
 
 CXXFLAGS	:= $(CFLAGS) -fno-rtti -fomit-frame-pointer -fno-exceptions -fno-asynchronous-unwind-tables -fno-unwind-tables
 
